# meetup-notes

2021-06-29/: CHANGELOG.md  notes.org  x210628.cabal
2021-06-29/test/: Main.hs
2021-07-19/: notes.org
2021-08-02/: notes.org
2021-08-09/: notes.org
2021-08-16/: notes.org
2021-08-23/: notes.org
2021-08-30/: notes.org
2021-09-13/: notes.org
2021-09-27/: notes.org
2021-10-04/: notes.org
